Prepare support for macOS and Windows versions.
Adjust the JDK system-specific include path based on the host system for
which we are compiling. Define PROTEGE_LINUX, PROTEGE_MACOS, or
PROTEGE_WIN32 accordingly.

--- a/Makefile.am
+++ b/Makefile.am
@@ -8,5 +8,5 @@ protege_SOURCES = src/protege.c src/options.h src/options.c \
 		  src/util.c src/util.h src/java.c src/java.h \
 		  $(convlib_sources)
 
-AM_CPPFLAGS = -I$(top_srcdir)/lib
+AM_CPPFLAGS = -I$(top_srcdir)/lib ${JDK_CPPFLAGS}
 LDADD = $(LIBOBJS)
