--- a/configure.ac
+++ b/configure.ac
@@ -20,8 +20,23 @@ dnl specify the path to the JDK
 AC_ARG_WITH([jdk],
             [AS_HELP_STRING([--with-jdk],
                             [Path to the Java Development Kit])],
-            [CPPFLAGS="$CPPFLAGS -I${with_jdk}/include -I${with_jdk}/include/linux"],
+            [AS_IF([test -f ${with_jdk}/include/jni.h],
+                   [JDK_CPPFLAGS="-I${with_jdk}/include"],
+                   [AC_MSG_ERROR(JDK not found at '${with_jdk}'.)])],
             [AC_MSG_ERROR([No JDK specified.])])
+
+dnl Host-based tweaks
+AC_CANONICAL_HOST
+AS_CASE([$host],
+        [*-*-linux-*], [AC_DEFINE([PROTEGE_LINUX], [1], [GNU/Linux version])
+                        JDK_CPPFLAGS="$JDK_CPPFLAGS -I${with_jdk}/include/linux"],
+        [*-*-darwin*], [AC_DEFINE([PROTEGE_MACOS], [1], [macOS version])
+                        JDK_CPPFLAGS="$JDK_CPPFLAGS -I${with_jdk}/include/darwin"],
+        [*-*-mingw32], [AC_DEFINE([PROTEGE_WIN32], [1], [Windows version])
+                        JDK_CPPFLAGS="$JDK_CPPFLAGS -I${with_jdk}/include/win32"],
+        [AC_MSG_ERROR(["Unsupported host: ${host}"])])
+
+AC_SUBST([JDK_CPPFLAGS])
 
 dnl Output files
 AC_CONFIG_FILES([Makefile])
@@ -33,6 +48,8 @@ echo "
 ${PACKAGE_NAME} version ${PACKAGE_VERSION}
 Configuration complete
 
+Host:               '${host}'
 Compiler:           '${CC} ${CFLAGS} ${CPPFLAGS}'
+Java flags:         '${JDK_CPPFLAGS}'
 
 "
