--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,5 @@
 AC_INIT([Protégé launcher], [0.1.0],
-        [dpg44@cam.ac.uk], [protege])
+        [dpg44@cam.ac.uk], [protege-launcher])
 AC_CONFIG_SRCDIR([configure.ac])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_AUX_DIR([config])
