Set Windows version number to 5.6.2.
Make sure the Windows executable gets metadata that match the version of
Protégé itself.

--- a/configure.ac
+++ b/configure.ac
@@ -9,8 +9,8 @@ AC_USE_SYSTEM_EXTENSIONS
 AM_INIT_AUTOMAKE([foreign subdir-objects silent-rules])
 
 dnl Program infos
-PROTEGE_WINDOWS_VERSION="5, 6, 0, 0"
-PROTEGE_VERSION="5.6.0-beta-1-SNAPSHOT"
+PROTEGE_WINDOWS_VERSION="5, 6, 2, 0"
+PROTEGE_VERSION="5.6.2"
 AC_SUBST([PROTEGE_WINDOWS_VERSION])
 AC_SUBST([PROTEGE_VERSION])
 
