Add a helper script to package the embedded JRE.
Creating the packages for the embedded JREs is not completely trivial
(especially for the MacOS JRE, which needs to be a "universal" one), so
we ad a script to automatize the task.

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4 --install
 
-dist_doc_DATA = AUTHORS COPYING.BSD COPYING.GPL README.md src/protege.ico
+dist_doc_DATA = AUTHORS COPYING.BSD COPYING.GPL README.md src/protege.ico helpers/prepare-jre.sh
 
 bin_PROGRAMS = protege
 
