Try auto UI scaling on GNU/Linux.
On Windows and MacOS, the Java virtual machine somehow automatically
detects whether it is running on a macine with a "HiDPI" display, and
automatically scales Swing widgets accordingly.

This does not seem to work automatically on GNU/Linux though, so here we
try (1) detecting whether we have a "HiDPI" display (defined, for our
purpose, as a display where the resolution is 144 DPI or more) and (2)
if so, append a `-Dsun.java2d.uiScale=X` option for the JVM, where _X_
is the scaling factor.

This feature is automatically disabled if the user has already set a
`sun.java2d.uiScale` option in the configuration file.

--- a/configure.ac
+++ b/configure.ac
@@ -64,6 +64,15 @@ AC_ARG_WITH([min-osx-version],
             [MACOS_EXTRA_CFLAGS="$MACOS_EXTRA_CFLAGS -mmacosx-version-min=$withval"],
             [MACOS_EXTRA_CFLAGS="$MACOS_EXTRA_CFLAGS"])
 
+dnl Support for UI auto-scaling on GNU/Linux
+AC_ARG_ENABLE([ui-scaling],
+              [AS_HELP_STRING([--enable-ui-scaling],
+                              [Enable UI auto-scaling on GNU/Linux.])],
+              [enable_ui_auto_scaling=$enableval],
+              [enable_ui_auto_scaling=no])
+AS_IF([test "x$enable_ui_auto_scaling" = xyes],
+      [AC_DEFINE([UI_AUTO_SCALING], [1], [Enable UI auto-scaling])])
+
 dnl Host-based tweaks
 AC_CANONICAL_HOST
 AS_CASE([$host],
